feat: create properties crud
